--- a/src/assets/scss/_view-mode-grid.scss
+++ b/src/assets/scss/_view-mode-grid.scss
@@ -17,7 +17,7 @@
         img {
             width: 258px;
             height: auto;
-            border-radius: 2px;
+            border-radius: 0px;
         }
 
         &:hover {
