--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -348,7 +348,7 @@ nav{
         }
         &.t-bg-collection{
             background-color: #2c2d2d;
-            border-top: 2px solid white;
+            border-top: 4px solid white;
             @media only screen and (max-width: 576px){
                 align-self: flex-end;
                 margin-bottom: 0 !important;
